src/main/java/com/example/Fooding/common/exception/error/RegisterFailedException.java
package com.example.Fooding.common.exception.error;

import com.example.Fooding.common.exception.ErrorCode;

public class RegisterFailedException extends RuntimeException{
    public RegisterFailedException(){
        super(ErrorCode.AUTHENTICATION_CONFLICT.getMessage());
    }
}